--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -155,7 +155,7 @@
   .codes .card_wrap .card .inner>.code_high .tooltip_common{display:none;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common{display:block;position:relative;display:inline;color:#fff;padding:0 10px;border-radius:10px;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_common:hover .m_tooltip-content{visibility: visible;}
-  .codes .card_wrap .card .inner>.code_high .m_content_common{visibility:hidden;width:355px;padding:7px 7px;color:white;text-align:center;position:absolute;z-index:1;line-height:1.2;}
+  .codes .card_wrap .card .inner>.code_high .m_content_common{visibility:hidden;width:355px;padding:7px 7px;color:white;position:absolute;z-index:1;line-height:1.2;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_red{background:#ff4d4d;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_red .m_tooltip-content{background:#ff4d4d;}
   .codes .card_wrap .card .inner>.code_high .m_tooltip_green{background:#87c442;}
