--- a/app/views/deals_days/_day_01.html.erb
+++ b/app/views/deals_days/_day_01.html.erb
@@ -231,6 +231,7 @@
       <address><span class="dis_price bestdeals">$16.16</span><span class="ori_price">$17.95</span>
         <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
+      <div class="m_tooltip_common m_tooltip_purple"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -369,6 +370,7 @@
       <address><span class="dis_price bestdeals">$505.75</span><span class="ori_price">$595.00</span>
         <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
+      <div class="m_tooltip_common m_tooltip_purple"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -405,6 +407,7 @@
       <address><span class="dis_price bestdeals">$248.24</span><span class="ori_price">$269.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -458,6 +461,7 @@
       <address><span class="dis_price bestdeals">$37.99</span><span class="ori_price">$49.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
