--- a/app/views/deals_days/_day_02.html.erb
+++ b/app/views/deals_days/_day_02.html.erb
@@ -79,6 +79,7 @@
       <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$19.99</span>
         <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
+      <div class="m_tooltip_common m_tooltip_purple"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -98,6 +99,7 @@
       <address><span class="dis_price bestdeals">$35.99</span><span class="ori_price">$39.99</span>
         <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
+      <div class="m_tooltip_common m_tooltip_purple"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -168,6 +170,7 @@
       <address><span class="dis_price bestdeals">$299.99</span><span class="ori_price">$399.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -306,6 +309,7 @@
       <address><span class="dis_price bestdeals">$34.95</span><span class="ori_price">$39.95</span>
         <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
+      <div class="m_tooltip_common m_tooltip_purple"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -512,6 +516,7 @@
       <address><span class="dis_price bestdeals">$13.46</span><span class="ori_price">$14.95</span>
         <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
+      <div class="m_tooltip_common m_tooltip_purple"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
