--- a/app/views/deals_days/_day_04.html.erb
+++ b/app/views/deals_days/_day_04.html.erb
@@ -411,6 +411,7 @@
       <address><span class="dis_price bestdeals">$26.39</span><span class="ori_price">$29.90</span>
         <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
+      <div class="m_tooltip_common m_tooltip_purple"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
