--- a/app/views/deals_days/_day_05.html.erb
+++ b/app/views/deals_days/_day_05.html.erb
@@ -96,6 +96,7 @@
       <address><span class="dis_price bestdeals">$24.99</span><span class="ori_price">$29.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -149,6 +150,7 @@
       <address><span class="dis_price bestdeals">$9.97</span><span class="ori_price">$12.59</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -236,6 +238,7 @@
       <address><span class="dis_price bestdeals">$22.97</span><span class="ori_price">$74.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -255,6 +258,7 @@
       <address><span class="dis_price bestdeals">$13.59</span><span class="ori_price">$21.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -512,6 +516,7 @@
       <address><span class="dis_price bestdeals">$92.89</span><span class="ori_price">$308.30</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
