--- a/app/views/deals_days/_day_06.html.erb
+++ b/app/views/deals_days/_day_06.html.erb
@@ -225,6 +225,7 @@
       <address><span class="dis_price bestdeals">$12.95</span><span class="ori_price">$29.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -329,6 +330,7 @@
       <address><span class="dis_price bestdeals">$11.99</span><span class="ori_price">$16.00</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -450,6 +452,7 @@
       <address><span class="dis_price bestdeals">$69.99</span><span class="ori_price">$89.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -622,6 +625,7 @@
       <address><span class="dis_price bestdeals">$10.99</span><span class="ori_price">$22.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
