--- a/app/views/promocodes_days/_day_01.html.erb
+++ b/app/views/promocodes_days/_day_01.html.erb
@@ -29,6 +29,7 @@
       <address><span class="dis_price">$95.24</span><span class="ori_price">$126.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">25ZFQQGD</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>25% off at $126.99</strong> with promo code: <strong class="m_codes">25ZFQQGD</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -212,6 +213,8 @@
         <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">30AL4LTI</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>30% off at $15.99</strong> with promo code: <strong class="m_codes">30AL4LTI</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
