--- a/app/views/promocodes_days/_day_03.html.erb
+++ b/app/views/promocodes_days/_day_03.html.erb
@@ -11,6 +11,7 @@
       <address><span class="dis_price">$11.89</span><span class="ori_price">$16.99</span>
         <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       <textarea readonly="readonly" class="code_area">30RHQ9GS</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>30% off at $16.99</strong> with promo code: <strong class="m_codes">30RHQ9GS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 29, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -31,6 +32,7 @@
       <address><span class="dis_price">$4.50</span><span class="ori_price">$8.99</span>
         <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       <textarea readonly="readonly" class="code_area">50KN8S59</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>50% off at $8.99</strong> with promo code: <strong class="m_codes">50KN8S59</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 29, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -195,6 +197,7 @@
       <address><span class="dis_price">$6.24</span><span class="ori_price">$11.34</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">45N85D75</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>45% off at $11.34</strong> with promo code: <strong class="m_codes">45N85D75</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -251,6 +254,7 @@
       <address><span class="dis_price">$11.49</span><span class="ori_price">$22.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">50Z3P3IC</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>50% off at $22.99</strong> with promo code: <strong class="m_codes">50Z3P3IC</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -307,6 +311,7 @@
       <address><span class="dis_price">$12.99</span><span class="ori_price">$25.99</span>
         <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       <textarea readonly="readonly" class="code_area">50KZR3IO</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>50% off at $25.99</strong> with promo code: <strong class="m_codes">50KZR3IO</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -381,6 +386,7 @@
       <address><span class="dis_price">$42.3</span><span class="ori_price">$140.99</span>
         <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       <textarea readonly="readonly" class="code_area">70RLKTTN</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>70% off at $140.99</strong> with promo code: <strong class="m_codes">70RLKTTN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -491,6 +497,7 @@
       <address><span class="dis_price">$22.43</span><span class="ori_price">$33.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">34QOPDUS</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>34% off at $33.99</strong> with promo code: <strong class="m_codes">34QOPDUS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 08, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
