--- a/app/views/promocodes_days/_day_06.html.erb
+++ b/app/views/promocodes_days/_day_06.html.erb
@@ -29,6 +29,7 @@
       <address><span class="dis_price">$24.49</span><span class="ori_price">$34.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">30ZDEGNP</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>30% off at $34.99</strong> with promo code: <strong class="m_codes">30ZDEGNP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -83,9 +84,11 @@
     <p><a target="_blank" href="https://amzn.to/2MwleWf">USB C Hub 3.0 Powered - Fansteck USB Hub Type C for Laptop MacBook Pro 4 USB Ports 3.0 Fast Speed and 1 USB...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$9.49</span><span class="ori_price">$18.99</span>
-        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+         <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">50XEP66X</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>50% off at $18.99</strong> with promo code: <strong class="m_codes">50XEP66X</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 01, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -106,6 +109,7 @@
       <address><span class="dis_price">$6.96</span><span class="ori_price">$9.94</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">30PNTSHOTS</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>30% off at $9.94</strong> with promo code: <strong class="m_codes">30PNTSHOTS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 04, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -162,6 +166,7 @@
       <address><span class="dis_price">$6.00</span><span class="ori_price">$11.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">5043Y4RL</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>50% off at $11.99</strong> with promo code: <strong class="m_codes">5043Y4RL</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 01, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -254,6 +259,7 @@
       <address><span class="dis_price">$14.29</span><span class="ori_price">$25.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">451NJ53K</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>45% off at $25.99</strong> with promo code: <strong class="m_codes">451NJ53K</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 13, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -436,6 +442,7 @@
       <address><span class="dis_price">$110.49</span><span class="ori_price">$129.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">15OFFVAMVO</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>15% off at $129.99</strong> with promo code: <strong class="m_codes">15OFFVAMVO</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 07, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
