--- a/app/views/promocodes_days/_day_07.html.erb
+++ b/app/views/promocodes_days/_day_07.html.erb
@@ -29,6 +29,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
       <address><span class="dis_price">$39.48</span><span class="ori_price">$140.99</span>
         <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       <textarea readonly="readonly" class="code_area">727F29RX</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>72% off at $140.99</strong> with promo code: <strong class="m_codes">727F29RX</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -67,6 +68,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
       <address><span class="dis_price">$13.41</span><span class="ori_price">$17.88</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">25NEIMBB</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>25% off at $17.88</strong> with promo code: <strong class="m_codes">25NEIMBB</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -106,6 +108,8 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
         <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">401WZXHN</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $23.99</strong> with promo code: <strong class="m_codes">401WZXHN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 26, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -162,6 +166,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
       <address><span class="dis_price">$8.25</span><span class="ori_price">$11.79</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">30BWSF9P</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>30% off at $11.79</strong> with promo code: <strong class="m_codes">30BWSF9P</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 26, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -218,6 +223,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
       <address><span class="dis_price">$11.39</span><span class="ori_price">$18.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">40P24M94</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $18.99</strong> with promo code: <strong class="m_codes">40P24M94</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 17, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -274,6 +280,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
       <address><span class="dis_price">$23.99</span><span class="ori_price">$39.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">4097NJ2D</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $39.99</strong> with promo code: <strong class="m_codes">4097NJ2D</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -330,6 +337,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
       <address><span class="dis_price">$23.39</span><span class="ori_price">$38.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">40F1NUXY</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $38.99</strong> with promo code: <strong class="m_codes">40F1NUXY</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -404,6 +412,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
       <address><span class="dis_price">$29.99</span><span class="ori_price">$49.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">40ZHMKD1</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $49.99</strong> with promo code: <strong class="m_codes">40ZHMKD1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><%= render 'deals/notes' %>
     </div>
@@ -424,6 +433,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
       <address><span class="dis_price">$19.75</span><span class="ori_price">$24.69</span>
         <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       <textarea readonly="readonly" class="code_area">20VI1MOH</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>20% off at $24.69</strong> with promo code: <strong class="m_codes">20VI1MOH</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 06, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -444,6 +454,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
       <address><span class="dis_price">$52.79</span><span class="ori_price">$59.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">12FGQLBN</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>12% off at $Origianl_price</strong> with promo code: <strong class="m_codes">12FGQLBN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -518,6 +529,7 @@ blog_01_amz_prime<div class="card clearfix" data-score="70" data-price="7.20">
       <address><span class="dis_price">$29.00</span><span class="ori_price">$57.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">501U61ZQ</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>50% off at $57.99</strong> with promo code: <strong class="m_codes">501U61ZQ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
