--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -43,7 +43,10 @@
 
 <!-- 
 <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
+<div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
+
 <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
+<div class="m_tooltip_common m_tooltip_purple"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
 
 <p>run out of stock soon</p>
 -->
@@ -152,6 +155,7 @@
       <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$29.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -171,6 +175,7 @@
       <address><span class="dis_price bestdeals">$11.17</span><span class="ori_price">$12.41</span>
         <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
+      <div class="m_tooltip_common m_tooltip_purple"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -326,6 +331,7 @@
       <address><span class="dis_price bestdeals">$22.17</span><span class="ori_price">$25.29</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -379,6 +385,7 @@
       <address><span class="dis_price bestdeals">$33.99</span><span class="ori_price">$68.30</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       <%= render 'deals/notes' %>
     </div>
   </div> 
