--- a/app/views/deals_days/_day_07.html.erb
+++ b/app/views/deals_days/_day_07.html.erb
@@ -11,6 +11,7 @@
       <address><span class="dis_price bestdeals">$21.83</span><span class="ori_price">$29.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -30,6 +31,7 @@
       <address><span class="dis_price bestdeals">$15.00</span><span class="ori_price">$25.00</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -201,6 +203,7 @@
       <address><span class="dis_price bestdeals">$11.99</span><span class="ori_price">$19.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -288,6 +291,7 @@
       <address><span class="dis_price bestdeals">$31.49</span><span class="ori_price">$34.99</span>
         <div class="tooltip_common tooltip_purple"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       </address>
+      <div class="m_tooltip_common m_tooltip_purple"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get discount by clipping coupon</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -341,6 +345,7 @@
       <address><span class="dis_price bestdeals">$33.99</span><span class="ori_price">$49.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -428,6 +433,7 @@
       <address><span class="dis_price bestdeals">$8.40</span><span class="ori_price">$12.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -515,6 +521,7 @@
       <address><span class="dis_price bestdeals">$42.31</span><span class="ori_price">$114.00</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
@@ -551,6 +558,7 @@
       <address><span class="dis_price bestdeals">$299.00</span><span class="ori_price">$699.99</span>
         <div class="tooltip_common tooltip_orange"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_orange"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by clipping coupon to the product that is being discounting.</p></div></div> 
       <%= render 'deals/notes' %>
     </div>
   </div> 
