--- a/app/views/promocodes_days/_day_02.html.erb
+++ b/app/views/promocodes_days/_day_02.html.erb
@@ -135,8 +135,9 @@
     <p><a target="_blank" href="https://amzn.to/2YmoUvT">Pure Hyaluronic Acid Serum Powder | 100% NATURAL | High Molecular Weight | Locks in moisture and creates full,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$13.56</span><span class="ori_price">$16.95</span>
-        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div> 
       </address>
+       <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       <textarea readonly="readonly" class="code_area">20XJASMINE</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>20% off at $16.95</strong> with promo code: <strong class="m_codes">20XJASMINE</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 04, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -229,6 +230,7 @@
       <address><span class="dis_price">$23.99</span><span class="ori_price">$39.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">402QS8ZY</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $39.99</strong> with promo code: <strong class="m_codes">402QS8ZY</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -303,6 +305,7 @@
       <address><span class="dis_price">$7.50</span><span class="ori_price">$14.99</span>
         <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
       <textarea readonly="readonly" class="code_area">50FLMG01</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>50% off at $14.99</strong> with promo code: <strong class="m_codes">50FLMG01</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -393,8 +396,10 @@
     <p><a target="_blank" href="https://amzn.to/2JWybqC">Babyltrl Dog Travel Bag - Airline Approved Pet Food Carrier Bag for Dogs - Includes 1 Pet Travel Tote, 2 Dog Food Containers,...</a></p>
     <div class="code_high">
       <address><span class="dis_price">$21.59</span><span class="ori_price">$35.99</span>
-        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+        <div class="tooltip_common tooltip_green">
+<span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">4055IBP1</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $35.99</strong> with promo code: <strong class="m_codes">4055IBP1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
