--- a/app/views/promocodes_days/_day_04.html.erb
+++ b/app/views/promocodes_days/_day_04.html.erb
@@ -29,6 +29,7 @@
       <address><span class="dis_price">$7.79</span><span class="ori_price">$12.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">40WATLRU</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $12.99</strong> with promo code: <strong class="m_codes">40WATLRU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 03, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -67,6 +68,7 @@
       <address><span class="dis_price">$8.99</span><span class="ori_price">$14.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">40O2TJ7Q</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>40% off at $14.99</strong> with promo code: <strong class="m_codes">40O2TJ7Q</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Jul 30, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -124,6 +126,7 @@
       <address><span class="dis_price">$19.99</span><span class="ori_price">$24.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">20YVX4LK</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>20% off at $24.99</strong> with promo code: <strong class="m_codes">20YVX4LK</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 28, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -144,6 +147,7 @@
       <address><span class="dis_price">$14.99</span><span class="ori_price">$19.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">25YMLNB7</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>25% off at $19.99</strong> with promo code: <strong class="m_codes">25YMLNB7</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -200,6 +204,7 @@
       <address><span class="dis_price">$18.39</span><span class="ori_price">$22.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">20QYF8AB</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>20% off at $22.99</strong> with promo code: <strong class="m_codes">20QYF8AB</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -293,6 +298,8 @@
         <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">51DDI1KZ</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>51% off at $32.99</strong> with promo code: <strong class="m_codes">51DDI1KZ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -421,6 +428,7 @@
       <address><span class="dis_price">$25.19</span><span class="ori_price">$35.99</span>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">30SPU4A2</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>30% off at $35.99</strong> with promo code: <strong class="m_codes">30SPU4A2</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 11, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
@@ -442,6 +450,8 @@
         <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
       </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
       <textarea readonly="readonly" class="code_area">5081P23Q</textarea><button class="copycode">Copy</button>
       <p class="mobile_code"><span>Take <strong>50% off at $48.99</strong> with promo code: <strong class="m_codes">5081P23Q</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 08, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
     </div>
